Footer credits now display correctly on mobile

--- a/style.css
+++ b/style.css
@@ -2452,9 +2452,13 @@ body, html {
   display: flex;
   justify-content: space-between; }
 
-.l-credit {
-  display: flex;
-  align-items: center; }
+@media (min-width: 700px) {
+  .l-credit {
+    display: flex;
+    align-items: center; } }
+@media (max-width: 700px) {
+  .l-credit {
+    text-align: center; } }
 
 .l-footerLinksContainer::after {
   clear: both;
@@ -2912,8 +2916,13 @@ input[type=button].searchSubmit {
 
 .footerCredits img {
   height: 50px;
-  width: auto;
-  margin-left: 20px; }
+  width: auto; }
+  @media (min-width: 700px) {
+    .footerCredits img {
+      margin-left: 20px; } }
+  @media (max-width: 700px) {
+    .footerCredits img {
+      margin-top: 10px; } }
 
 .credit {
   text-transform: uppercase;
