--- a/styles/layout/footer/footer_credits.scss
+++ b/styles/layout/footer/footer_credits.scss
@@ -1,10 +1,14 @@
 .l-footerCredits{
 	display: flex;
-	// Gutter will make this look less strange
 	justify-content: space-between;
 }
 
 .l-credit{
-	display: flex;
-	align-items: center;
+	@media (min-width: 700px){
+		display: flex;	
+		align-items: center;
+	}
+	@media (max-width: 700px){
+		text-align: center;
+	}
 }
