--- a/styles/modules/footer/footer_credits.scss
+++ b/styles/modules/footer/footer_credits.scss
@@ -5,7 +5,12 @@
 .footerCredits img{  
 	height: 50px;
 	width: auto;
-	margin-left: 20px;
+	@media (min-width: 700px){
+		margin-left: 20px;
+	}
+	@media (max-width: 700px){
+		margin-top: 10px;
+	}
 }
 
 .credit{
